--- a/mysite/templates/mysite/index.html
+++ b/mysite/templates/mysite/index.html
@@ -9,30 +9,37 @@
        
         <title>Agricom</title>
         <style type="text/css">
-		    #gis {width: 100%;height:400px;}
+		    #gis {width:100%;height:400px;}
 	    </style>
-        <script type="text/javascript" src="{% static 'mysite/dist/leaflet.ajax.js' %}" >	</script>
+        <script type="text/javascript" src="{% static 'mysite/dist/leaflet.ajax.js' %}" > </script>
     </head>
 <body>
-    <h5>Incidences Reported</h5
-    >
-<br>
-        <script type="text/javascript">
-            function our_layers(map,options){});
-            var datasets = new L.GeoJSON.AJAX("{% url 'country' %}",{
-			
-			onEachFeature: function(feature,layer){
-				layer.bindPopup(feature.properties.countries.toString());
-			}
+    <h3><i>Incidences Reported</i></h3>
+        <br>
+        <script>
+            function our_layers(map, options){
+                let datasets = new L.GeoJSON.AJAX("{% url 'country' %}",{
+                    onEachFeature: function(feature,layer){
+                        layer.bindPopup(feature.properties.name.toString());
+                    }
 
-		});
+                });
 
+                datasets.addTo(map);
 
-         </script>
-            {% leaflet_map "gis" %}
-            {% leaflet_map "gis" callback="window.our_layers" %}
+                let points = new L.GeoJSON.AJAX("{% url 'incidences' %}",{
+                    onEachFeature: function(feature,layer){
+                        layer.bindPopup(feature.properties.name.toString());
+                    }
+        
+                });
+        
+                //datasets.addTo(map);
+                points.addTo(map);
+              
+            }
+        </script>
 
-           
-
+        {% leaflet_map 'gis' callback="window.our_layers" %}
 </body>
 </html>
